0.03
 - Remove diacritics from author name in Makefile.PL.

0.02 2014-08-07T09:25:47+02:00
 - Add DESCRIPTION section to doc.
 - Add File::Find::Rule::Dicom to SEE ALSO section in doc.
 - Add minimum Perl version.

0.01 2014-08-05T16:59:33+02:00
 - First version.