@@ -1,5 +1,6 @@
 0.03
  - Remove diacritics from author name in Makefile.PL.
+ - Update Module::Install to 1.16 version.
 
 0.02 2014-08-07T09:25:47+02:00
  - Add DESCRIPTION section to doc.
